# qeg-nmr-qua

./: .buildinfo  .gitignore  LICENSE  README.html  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js
.github/workflows/: docs.yml  jekyll-gh-pages.yml
_modules/: index.html
_modules/qeg_nmr_qua/analysis/: data_saver.html
_modules/qeg_nmr_qua/config/: config.html  config_from_settings.html  controller.html  element.html  integration.html  pulse.html  settings.html  waveform.html
_modules/qeg_nmr_qua/experiment/: experiment.html  experiment_1d.html  experiment_2d.html  macros.html
_sources/: README.md.txt  index.rst.txt
api/: analysis.html  config.html  experiment.html  index.html  spectroscopy.html
docs/: README.md  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: analysis.rst  config.rst  experiment.rst  index.rst  spectroscopy.rst
examples/: config_building.py  opx_config_EXAMPLE.json  overrotcal_xy.py  pulcal_1x.py  zg.py
src/qeg_nmr_qua/: __init__.py  config.py  data_saver.py  live_plotter.py
src/qeg_nmr_qua/analysis/: data_saver.py  encoder.py
src/qeg_nmr_qua/config/: config.py  config_from_settings.py  controller.py  element.py  integration.py  pulse.py  qm_default_cfg.py  settings.py  waveform.py
src/qeg_nmr_qua/experiment/: experiment.py  experiment_1d.py  experiment_2d.py  macros.py
tests/: __init__.py  config.json  config_dump.json  config_opx.json  example_config.json  test_1d_experiment.py  test_2d_experiment.py  test_config_serialization.py  test_data_saver.py  test_qeg_nmr_qua.py
(+2 files in other folders)
